Complete making Thatix - landing page form Assignment 04 using DOM manipulation and tailwindcsss

--- a/src/style.css
+++ b/src/style.css
@@ -13,9 +13,9 @@
 }
 
 @layer base {
-  * {
-    /* outline: 1px solid red; */
-  }
+  /* * {
+    outline: 1px solid red;
+  } */
 
   html {
     scroll-behavior: smooth;
